# kaggle-mcp

./: .gitignore  Dockerfile  README.md  client.py  demo.ipynb  kaggle_api_explorer.py  kaggle_mcp_notebook.py  main.py  note_new_note.md  pyproject.toml  requirements.txt  server.py  smithery.yaml
api_exploration/: api_information.txt  kaggle_api_explorer.py  test_request.py
note folder/: README.md
notes/: note_new_note.md
